--- a/plimsoltech_website/static/styles.css
+++ b/plimsoltech_website/static/styles.css
@@ -179,7 +179,7 @@ border-radius: 10px orange;
 
 
 footer{
-    background-color: grey;
+    background-color: rgb(163, 118, 118);
     padding: 10px;
     padding-bottom: 0;
     flex-direction: column;
@@ -208,6 +208,7 @@ footer{
     position: relative;
     text-align: center;
 }
+
 
 .third-col {
     float: right;
@@ -333,9 +334,26 @@ footer .second-col {
         animation: moveNews 25s linear infinite; /* Adjust the duration as needed */
     }
 
-    .first-col, .second-col, .third-col {
+    .first-col {
         width: auto;
+        margin-left: 3%;
+        text-align: center;
     }
 
+    .second-col {
+        width: auto;
+        margin-left: 3%;
+    }
+
+    .third-col {
+        width: auto;
+        margin-left: 10%;
+        text-align: center;
+    }
+    #upper-footer {
+        flex-direction: column;
+        display: flex;
+        text-align: center;
+    }
 
 }
