--- a/plimsoltech_website/templates/index.html
+++ b/plimsoltech_website/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>WELCOME TO THE OFFICIAL PAGE OF PlimsolTech</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="/static/styles.css">
   <link rel="stylesheet" href="https://cdn.cloudwares.com/css/webfonts.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
@@ -26,10 +26,10 @@
     
         <nav class="navmenu">
             <ul>
-                <li><a href="index.html">Home</a> </li>
-                <li><a href="about.html">About Us</a> </li>
-                <li><a href="products.html">Products</a> </li>
-                <li><a href="contact.html">Contact Us</a> </li>
+                <li><a href="/">Home</a> </li>
+                <li><a href="/about">About Us</a> </li>
+                <li><a href="/products">Products</a> </li>
+                <li><a href="/contact">Contact Us</a> </li>
             </ul>
 
         </nav>
@@ -54,7 +54,7 @@
 
     <section class="main">
     <div class="banner">
-        <img src="images/hello world.jpg" width="100%" height="380px" alt="banner_image">
+        <img src="/static/images/hello world.jpg" width="100%" height="380px" alt="banner_image">
         <h1>
             You are welcome, This is PlimsolTech
         </h1>
@@ -148,7 +148,7 @@
 
 
 
-<script src="toggle.js"></script>
+<script src="/static/toggle.js"></script>
 <script src="review.js"></script>
 </body>
 </html>
