--- a/plimsoltech_website/templates/index.html
+++ b/plimsoltech_website/templates/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/static/styles.css">
   <link rel="stylesheet" href="https://cdn.cloudwares.com/css/webfonts.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 </head>
 <body>
     <header>
@@ -35,11 +36,15 @@
         </nav>
              <!-- Create a search option-->
              <form class="search">
-                <input type="text" placeholder="Search here">
+                <input type="text" id="search-input" placeholder="Ask ChatGPT">
                 <button>
                     <input type="submit" value="Go">
                 </button> 
-            </form>       
+            </form>   
+            
+             <!-- Display the ChatGPT response here -->
+             <div id="search-response"></div>
+            </div>
 
     </header>
 
@@ -122,7 +127,7 @@
             <div class="second-col">
                 <div class="social-icons">
                 
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/nonycryptengine" target="_blank"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
