--- a/plimsoltech_website/templates/about.html
+++ b/plimsoltech_website/templates/about.html
@@ -33,6 +33,10 @@ footer{
     display: block;
 }
 
+a {
+    text-decoration: none;
+}
+
 #upper-footer {
     flex-direction: row;
     display: flex;
