--- a/plimsoltech_website/templates/index.html
+++ b/plimsoltech_website/templates/index.html
@@ -36,7 +36,7 @@
         </nav>
              <!-- Create a search option-->
              <form class="search">
-                <input type="text" id="search-input" placeholder="Ask ChatGPT">
+                <input type="text" id="search-input" placeholder="ChatGPT">
                 <button>
                     <input type="submit" value="Go">
                 </button> 
@@ -120,9 +120,11 @@
     <footer>
         <section id="upper-footer">
             <div class="first-col">
-                <p><a href="#">Terms of Service</a></p><br>
+                <p><a href="#">Terms</a></p><br>
                 <p><a href="#">Privacy</a></p>
             </div>
+
+            
     
             <div class="second-col">
                 <div class="social-icons">
@@ -133,10 +135,11 @@
                     <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
             </div>
+
     
             <div class="third-col">
                 <p>Phone: +234 000 9999</p><br>
-                <p>E-MAIL: ourmail@example.com</p>
+                <p>E-mail: ourmail@example.com</p>
             </div>
     
         </section>
