--- a/plimsoltech_website/static/styles.css
+++ b/plimsoltech_website/static/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 
  html, body{
@@ -191,6 +192,7 @@ footer{
     display: flex;
     margin: 0;
     justify-content: space-between;
+    column-gap: normal;
 }
 
 .first-col {
@@ -198,12 +200,13 @@ footer{
     padding: 10px;
     width: 20%;
     text-align: justify;
+    width: 125px;
 }
 
 .second-col {
     margin-left:  5%;
     margin-top: 0;
-    width: 40%;
+    width: 50%;
     padding: 10px;
     position: relative;
     text-align: center;
@@ -214,10 +217,14 @@ footer{
     float: right;
     padding: 10px;
     margin-top: 0;
-    width: 20%;
-    position: relative;
+    width: 18%;
     text-align: justify;
+    color: rgb(23, 187, 187);
+}
 
+.footer-nav {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif 
+    padding: 10px;
 }
 
 footer .second-col {
@@ -355,5 +362,6 @@ footer .second-col {
         display: flex;
         text-align: center;
     }
+
 
 }
